# unicode-animations-py

./: .gitignore  README.md  demo.py  pyproject.toml
examples/: textual_demo.py
tests/: test_braille.py  test_spinner.py
unicode_animations/: __init__.py  __main__.py  braille.py  spinner.py
