[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "unicode-animations"
version = "0.2.2"
description = "Pre-built Unicode braille spinner animations as raw frame data"
readme = "README.md"
requires-python = ">=3.10"
license = "MIT"
keywords = ["spinner", "braille", "unicode", "animation", "cli"]
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]

[dependency-groups]
dev = [
    "pytest",
    "textual>=8.0.0",
]
